Tweaking research statement.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -1,6 +1,8 @@
-\textbf{\textit{What processes control the generation of biodiversity?}}
+% \textbf{\textit{What processes control the generation of biodiversity?}}
+\textbf{\textit{What processes are responsible for the generation and
+        distribution of biodiversity?}}
 Elucidating answers to this question, in its broadest sense, is the primary
-motivation of my lab group.
+motivation of my research group.
 While research interests in my lab are diverse, our work is unified by
 % (1) benefiting from, and contributing to, the rich information housed in
 % biodiversity research collections
@@ -123,7 +125,8 @@ a result that makes sense in light of the life history and habitat
 preferences of these lizards.
 % project repo: https://github.com/phyletica/gekgo
 
-The entire arc of this line of inquiry was funded by NSF
+The entire arc of this line of inquiry was funded by the National Science
+Foundation (NSF)
 (DEB
 \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1011423}{1011423},
 \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1308885}{1308885},
@@ -254,12 +257,13 @@ avoid having to sample them with computationally expensive algorithms,
 across the tree to relax the assumption of a strict ``molecular clock'' while
 minimizing computational burden,
 and
-(3) limit the size of the state space that needs to be considered when
+(3) limiting the size of the state space that needs to be considered when
 calculating the likelihood toward the root of the tree.
 These advances are imperative for inferring large phylogenies from genomic data
 while explicitly accounting for the variation in evolutionary history across
 chromosomes.
-We will continue to seek funds from NSF to support this work.
+% We will continue to seek funds from NSF to support this work.
+We will continue to seek extramural funds to support this work.
 
 \subsubsection*{An evolutionary approach to emerging infectious diseases}
 Globally, the association between habitat fragmentation and the emergence of
@@ -280,8 +284,9 @@ which raises the chances of pathogen variants with zoonotic potential.
 We are working on testing this model using mouse lemurs, lice, and viruses in
 Madagascar.
 We received favorable reviews of our proposal to the NSF Ecology and Evolution
-of Infectious Diseases (EEID) program in Fall 2017, and we are currently
-preparing to re-submit this proposal in November.
+of Infectious Diseases (EEID) program,
+% in Fall 2017,
+and are currently preparing to re-submit this proposal. % in November.
 
 % \subsubsection*{Diversification in West-Central African rainforests}
 % I am working with Adam Leach\'{e} and Matthew Fujita to apply the novel
@@ -311,8 +316,10 @@ to simultaneously infer
 genomes to be admixed),
 (2) spatial genetic differentiation within each population, and
 (3) the phylogenetic relationships of the populations.
-We are planning to submit a proposal to the NSF DEB Systematics and
-Biodiversity Science Cluster in Spring 2020 to fund this work.
+We are planning to submit a proposal to the NSF DEB
+% Systematics and Biodiversity Science Cluster
+Evolutionary Processes Cluster
+to fund this work.
 
 
     %   Continued refinement of testing for shared divergences
