More work on research statement.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -165,9 +165,16 @@ and
 % Below, I include short and long-term plans for funding the research in my
 % lab, which, given my current position, is geared toward opportunities in the
 % United States.
-% However, if I were fortunate enough to join the Department of Biology at the
-% University of Victoria, I am confident that the research summarized below would
-% be competitive for Discovery Grants and other funding opportunities from the
+% However, if I were fortunate enough to join the
+% Department of Biology at the University of Victoria,
+% Natural History Museum of Denmark
+% at the
+% University of Copenhagen,
+% I am confident that the research summarized below would
+% be competitive for
+% funding opportunities in Denmark and from the
+% European Research Council.
+% Discovery Grants and other funding opportunities from the
 % NSERC of Canada.
 
 
