Adding comment for copenhagen.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -168,6 +168,7 @@ and
 % However, if I were fortunate enough to join the
 % Department of Biology at the University of Victoria,
 % Natural History Museum of Denmark
+% Department of Biology
 % at the
 % University of Copenhagen,
 % I am confident that the research summarized below would
