Adding (commented) text for durham.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -169,10 +169,15 @@ and
 % Department of Biology at the University of Victoria,
 % Natural History Museum of Denmark
 % Department of Biology
+% Department of Biosciences
+% at
+% Durham University,
 % at the
 % University of Copenhagen,
 % I am confident that the research summarized below would
 % be competitive for
+% funding opportunities in the United Kingdom and the
+% European Research Council.
 % funding opportunities in Denmark and from the
 % European Research Council.
 % Discovery Grants and other funding opportunities from the
