--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -210,18 +210,23 @@ coevolution.
 % In genome evolution, if a region of a chromosome is duplicated that contains
 % multiple members of a gene family, there will be multiple, simultaneous
 % divergences in the evolutionary history of this gene family.
-Currently, we lack a statistical framework for testing the predictions of the
+Prior to our work, we
+lacked a statistical framework for testing the predictions of the
 diverse and interesting processes that violate this assumption.
-My lab is currently funded by NSF
+With funding from the NSF
 (\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1656004&HistoricalAwards=false}{DEB 1656004})
-to create such a framework by generalizing the space of phylogenies that is
-explored during Bayesian phylogenetic inference.
-By exploring the full space of phylogenies, we can approximate the probability
+we created such a framework by generalizing the space of phylogenies that is
+explored during Bayesian phylogenetic inference,
+allowing us to approximate the probability
 of patterns predicted by processes that cause nonindependent divergences 
-across the tree of life.
-We have implemented this approach in 
-\href{http://phyletica.org/ecoevolity/}{ecoevolity}
-and are currently testing it using simulations.
+across the tree of life
+\footnote{\label{Oaks21phycoeval}\shortfullcite{Oaks2021phycoeval}\hspace{-0.8em}}.
+% By exploring the full space of phylogenies, we can approximate the probability
+% of patterns predicted by processes that cause nonindependent divergences 
+% across the tree of life.
+% We have implemented this approach in 
+% \href{http://phyletica.org/ecoevolity/}{ecoevolity}
+% and are currently testing it using simulations.
 
 One motivation for developing this new statistical phylogenetic framework, is
 our desire to test several long-standing biogeographical hypotheses to explain
